repository and have aligned versions.

v0.14next
=========

Released: UNRELEASED

Synnefo-wide
------------

* Integrate Pithos tests in continuous integration.

Astakos
-------

* Changes in project schema:

  * A Project entry is created when submitting an application for a new
    project, rather than on approval. Its state is dependent on the state
    of its `reference' application (current definition).

  * Improve recording of membership actions.

Cyclades
--------

* Implement Floating IP addresses, which are addresses that can be dynamically
  added and removed to a running server.

  * Implement the 'os-floating-ips' and 'os-floating-ip-pools' API extensions.
  * Implement 'snf-manage floating-ip-list' management command.
  * Add 'floating_ip_pool' attribute to networks. Such networks must exist to
    all Ganeti backends.

* Speed up server reconciliation, by performing parallel reconciliation for
  each backend.
* Implement IPv6 only networks.
* Implement 'resize' server action.

  * Implement the 'resize' server action, to change the flavor of a server.
  Only 'cpu' and 'memory' resizing is supported.

* Compute quotas for CPU and memory of running vms.
* Obsolete PUBLIC_USE_POOL setting, since Cyclades manages IP pool for all
  type of networks.
* Extend servers info API response with 'SNF:fqdn' attribute, and introduce
  CYCLADES_SERVERS_FQDN to set the template for servers FDQN.
* Extend servers info API response with 'SNF:port_forwarding' attribute,
  describing port fowarding rules (DNAT) that are applied to vms. The
  description of such rules is done via the new CYCLADES_PORT_FORWARDING
  setting.

Pithos
------

* Refactor metadata schema (table attributes) in Pithos DB to speedup current
objects by domain attribute. This is used by Plankton for listing VM images.

* Enforce container-level atomicity in (most) Pithos API calls.


.. _Changelog-0.14.5:

v0.14.5
=======

Released: Wed Aug  7 11:19:49 EEST 2013

Pithos
------
